Fix text readability if bg image does not load

--- a/themes/mao/src/scss/components/_twitter-teaser.scss
+++ b/themes/mao/src/scss/components/_twitter-teaser.scss
@@ -3,6 +3,7 @@
   min-height: 14em;
   align-items: center;
   border-radius: 0.1875em;
+  background-color: setting-color(a);
   background-image: url('/images/twitter-bg.jpg');
   background-size: cover;
   color: #fff;
